Fix z-index

--- a/css/main.css
+++ b/css/main.css
@@ -141,7 +141,7 @@ ul {
     right: 0;
     height: 34px;
     background: #F8EED9 url(../img/squiggle.png) bottom repeat-x;
-    z-index: 10;
+    z-index: 1000;
   }
 
   #main::after {
@@ -618,7 +618,7 @@ only screen and (max-width: 680px) {
   #navigation {
     width: 100%;
     padding-top: 18px;
-    z-index: 100;
+    z-index: 1001;
     pointer-events: none;
   }
 
